<resources>
    <string name="app_name">ProjectoShein</string>
    <string name="bienvenida">Bienvenido a SHEIN</string>
    <string name="categoria">Categoria</string>
    <string name="cesta">Cesta</string>
    <string name="comprar">Comprar</string>
    <string name="compras">IR DE COMPRAS</string>
    <string name="condiciones">Al registrarse, acepta nuestra Politica de Privacidad de Cookies y nuestros Terminos y Condiciones</string>
    <string name="contentDescription">contentDescription</string>
    <string name="continuar">continuar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incio_publicidad">Puedes modificar tus preferencias en ajustes, en cualquier momento.</string>
    <string name="iniciar_sesion">iniciar_sesion</string>
    <string name="nuevos">NUEVO</string>
    <string name="registrarse">registrarse</string>
    <string name="sheinpe">SHEINpe</string>
    <string name="siguiente">INICIAR SESION / REGISTRARSE</string>
    <string name="terminos">Al ingresar en su cuenta, acepta nuestra Politica de Privacidad de Cookies y nuestros Terminos y Condiciones</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="yo">Yo</string>
</resources>