<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.frgRegistro">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/sheinpe"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="200dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btnContinuarRegistro"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:backgroundTint="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="380dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:text="@string/condiciones"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/btnCerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_close_24" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Me gustaria recibir ofertas exclusivas por correo electronico"
        android:textColor="@color/gray"
        android:textSize="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="30dp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="Numero de movil o dirección email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        app:passwordToggleEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>